fix: adjust sub menu spacing

--- a/assets/css/components/menu.css
+++ b/assets/css/components/menu.css
@@ -1,4 +1,4 @@
 .menu-level-2 {
-  box-shadow: theme("space[3]") 0 0 theme("colors.warmGray[50]"),
-    theme("space[-3]") 0 0 theme("colors.warmGray[50]");
+  box-shadow: theme("space[5]") 0 0 theme("colors.warmGray[50]"),
+    theme("space[-5]") 0 0 theme("colors.warmGray[50]");
 }
